--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,6 +1,8 @@
-add_executable(main
+add_executable(pico_emb
         main.c
 )
 
-target_link_libraries(main pico_stdlib freertos)
-pico_add_extra_outputs(main)
+set_target_properties(pico_emb PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
+target_link_libraries(pico_emb pico_stdlib oled1_lib freertos hardware_adc hardware_pwm)
+pico_add_extra_outputs(pico_emb)
